Fix tests, exception handling, add screenshots and update skill files